Added a "getStyles" method.  This fixes some of the weird problems with plotting (especially when the number of colors is e=less than the number of groups).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@8 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -44,7 +44,7 @@ export("Reaper")
 exportMethods("plot", "image", "screeplot")
 
 # novel generic functions
-exportMethods("makeFigures", "getColors", "getSplit", "scatter", "heat")
+exportMethods("makeFigures", "getColors", "getStyles", "getSplit", "scatter", "heat")
 
 
 #importFrom(stats, "anova")
