Added a bunch of different agDim.. functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@16 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: Thresher
-Version: 0.9.13
+Version: 0.9.15
 Date: 2015-10-27
 Title: Threshing and Reaping for Principal Components
 Author: Kevin R. Coombes
@@ -9,7 +9,8 @@ Description: The Thresher package defines the classes used to identify
   components and number of clusters (reaping) in a joint application
   of PCA and hierarchical clustering.
 Depends: R (>= 3.1), ClassDiscovery
-Imports: methods, stats, graphics, MASS, colorspace, movMF, ade4, oompaBase
+Imports: methods, stats, graphics, MASS, colorspace, movMF, ade4,
+  oompaBase, kernlab, changepoint
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
