[1] Removed the "logtransform" option from agDimension. [2] Changed "Naive" to "TwiceMean"
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@17 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -25,8 +25,8 @@ export(brokenStick, bsDimension)
 exportClasses("AuerGervini")
 export(AuerGervini, agDimension)
 
-export(agDimNaive,
-       agDimKmeans, agDimKmeans3, agDimKmeans3,
+export(agDimTwiceMean,
+       agDimKmeans, agDimKmeans2, agDimKmeans3,
        agDimSpectral, agDimTtest, agDimTtest2,
        agDimCPT)
 
