Celenaed upot he NAMESPACE, turning several 'import' directives into calls to 'importFrom".
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@21 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -4,13 +4,13 @@
 import(methods)
 import(stats)
 import(graphics)
-import(MASS)
+importFrom(MASS, mvrnorm)
+importFrom(ade4, dist.binary)
+importFrom(kernlab, specc)
+importFrom(changepoint, cpt.mean, cpts)
+importFrom(cpm, detectChangePointBatch)
 import(colorspace)
 import(movMF)
-import(ade4)
-import(changepoint)
-import(kernlab)
-import(cpm)
 
 import(oompaBase)
 import(ClassDiscovery)
