[1] Started writing more complete documentation (Rd man files). [2] As a result, decided to take the intermediate results ofr "lowerBounds" and "outerBounds" out of the AuerGervini class, since we never use them for anything and the user really has no need to see them.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@22 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -25,7 +25,7 @@ export(brokenStick, bsDimension)
 # compute number of PCs using Auer-Gervini method
 exportClasses("AuerGervini")
 export(AuerGervini, agDimension)
-
+# lots of ways to automate the count
 export(agDimTwiceMean,
        agDimKmeans, agDimKmeans2, agDimKmeans3,
        agDimSpectral, agDimTtest, agDimTtest2,
@@ -52,10 +52,5 @@ export("Reaper")
 exportMethods("plot", "image", "screeplot")
 
 # novel generic functions
-exportMethods("makeFigures", "getColors", "getStyles", "getSplit", "scatter", "heat")
-
-
-#importFrom(stats, "anova")
-#exportMethods("show")
-#exportClasses("Bum")
-#export("Bum")
+exportMethods("makeFigures", "getColors", "getStyles",
+              "getSplit", "scatter", "heat")
