[1] Mainly wrote the documentation for the "agDimFunctions". [2] But also changed the agDimKmeans3 function to treat "intermediate" as "long" (and not "short" as was done before).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@24 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Thresher
-Version: 0.9.28
-Date: 2015-10-30
+Version: 0.9.30
+Date: 2015-10-31
 Title: Threshing and Reaping for Principal Components
-Author: Kevin R. Coombes
+Author: Kevin R. Coombes, Min Wang
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: The Thresher package defines the classes used to identify
   outliers (threshing) and compute the number of significant principal
