--- a/pkg/PCDimension/DESCRIPTION
+++ b/pkg/PCDimension/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: PCDimension
-Version: 0.9.31
+Version: 1.0.0
 Date: 2015-11-02
 Title: Finding the Number of Significant Principal Components
 Author: Kevin R. Coombes, Min Wang
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: The PCDimension package implements two methods for
-  determinieng te number of signficant principal components.
+  determining the number of significant principal components.
 Depends: R (>= 3.1), ClassDiscovery
-Imports: methods, stats, graphics, kernlab, changepoint, cpm
+Imports: methods, stats, graphics, oompaBase, kernlab, changepoint, cpm
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
