--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -6,30 +6,16 @@ import(stats)
 import(graphics)
 importFrom(MASS, mvrnorm)
 importFrom(ade4, dist.binary)
-importFrom(kernlab, specc)
-importFrom(changepoint, cpt.mean, cpts)
-importFrom(cpm, detectChangePointBatch)
 import(colorspace)
 import(movMF)
 
 import(oompaBase)
 import(ClassDiscovery)
+import(PCDimension)
 
 # redefined S3 methods
 importMethodsFrom(oompaBase, "summary", "plot", "image")
 importMethodsFrom(ClassDiscovery, "screeplot")
-
-# compute number of PCs using broken-stick model
-export(brokenStick, bsDimension)
-
-# compute number of PCs using Auer-Gervini method
-exportClasses("AuerGervini")
-export(AuerGervini, agDimension)
-# lots of ways to automate the count
-export(agDimTwiceMean,
-       agDimKmeans, agDimKmeans3,
-       agDimSpectral, agDimTtest, agDimTtest2,
-       agDimCPT, makeAgCpmFun)
 
 # match labels in two different cluster assignments
 export(labelMatcher, matchLabels,
