[1] Fixed the bug in the Kmeans method. [2] Added new algorithm, adDimLeap. [3] Added a new function, compareAgDimMethods [4] Bumped the minor version number to reflect new features.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@31 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/PCDimension/NAMESPACE
+++ b/pkg/PCDimension/NAMESPACE
@@ -20,8 +20,9 @@ export(brokenStick, bsDimension)
 exportClasses("AuerGervini")
 export(AuerGervini, agDimension)
 # lots of ways to automate the count
+export(compareAgDimMethods)
 export(agDimTwiceMean,
        agDimKmeans, agDimKmeans3,
        agDimSpectral, agDimTtest, agDimTtest2,
-       agDimCPT, makeAgCpmFun)
+       agDimCPT, makeAgCpmFun, agDimLeap)
 
