Modify namespace and export randomized-based model.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@37 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/PCDimension/NAMESPACE
+++ b/pkg/PCDimension/NAMESPACE
@@ -16,6 +16,9 @@ importMethodsFrom(oompaBase, "summary", "plot")
 # compute number of PCs using broken-stick model
 export(brokenStick, bsDimension)
 
+# compute number of PCs using randomization-based model
+export(rndLambdaF)
+
 # compute number of PCs using Auer-Gervini method
 exportClasses("AuerGervini")
 export(AuerGervini, agDimension)
