Remove the adDimLeap criteria and update the namespace file.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@39 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/PCDimension/NAMESPACE
+++ b/pkg/PCDimension/NAMESPACE
@@ -27,5 +27,5 @@ export(compareAgDimMethods)
 export(agDimTwiceMean,
        agDimKmeans, agDimKmeans3,
        agDimSpectral, agDimTtest, agDimTtest2,
-       agDimCPT, makeAgCpmFun, agDimLeap)
+       agDimCPT, makeAgCpmFun)
 
