--- a/pkg/PCDimension/DESCRIPTION
+++ b/pkg/PCDimension/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: PCDimension
-Version: 1.1.4
-Date: 2017-07-12
+Version: 1.1.5
+Date: 2017-09-29
 Title: Finding the Number of Significant Principal Components
 Author: Kevin R. Coombes, Min Wang
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
-Description: The PCDimension package implements two methods for
-  determining the number of significant principal components.
+Description: Implements methods for determining the number of
+  significant principal components. 
 Depends: R (>= 3.1), ClassDiscovery
 Imports: methods, stats, graphics, oompaBase, kernlab, changepoint, cpm
 License: Apache License (== 2.0)
