--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Thresher
-Version: 0.11.0
-Date: 2016-05-16
+Version: 0.11.2
+Date: 2017-12-11
 Title: Threshing and Reaping for Principal Components
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
@@ -10,6 +10,7 @@ Description: The Thresher package defines the classes used to identify
   of PCA and hierarchical clustering.
 Depends: R (>= 3.1), ClassDiscovery, PCDimension
 Imports: methods, stats, graphics, MASS, colorspace, movMF, ade4, oompaBase
+Suggests: NbClust
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
