--- a/pkg/PCDimension/DESCRIPTION
+++ b/pkg/PCDimension/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Implements methods to automate the Auer-Gervini graphical
   Bayesian approach for determining the number of significant
   principal components. Automation uses clustering, change points, or
   simple statistical models to distinguish "long" from "short" steps
-  in a graph showing the posterior number of compnents as a function
+  in a graph showing the posterior number of components as a function
   of a prior parameter.
 Depends: R (>= 3.1), ClassDiscovery
 Imports: methods, stats, graphics, oompaBase, kernlab, changepoint, cpm
