Minor tweaks to start passing R CMD check. Includes updating the saved test output files, and writing out full function argument names.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@58 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -6,6 +6,7 @@ import(stats)
 import(graphics)
 importFrom(MASS, mvrnorm)
 importFrom(ade4, dist.binary)
+importFrom(grDevices, colors, png, dev.off)
 import(colorspace)
 import(movMF)
 
