--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Thresher
-Version: 0.11.2
-Date: 2017-12-11
+Version: 0.11.3
+Date: 2018-01-08
 Title: Threshing and Reaping for Principal Components
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
@@ -9,7 +9,7 @@ Description: The Thresher package defines the classes used to identify
   components and number of clusters (reaping) in a joint application
   of PCA and hierarchical clustering.
 Depends: R (>= 3.1), ClassDiscovery, PCDimension
-Imports: methods, stats, graphics, MASS, colorspace, movMF, ade4, oompaBase
+Imports: methods, stats, graphics, grDevices, MASS, colorspace, movMF, ade4, oompaBase
 Suggests: NbClust
 License: Apache License (== 2.0)
 biocViews: Clustering
