Major push on man pages.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@62 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/NAMESPACE
+++ b/pkg/Thresher/NAMESPACE
@@ -27,7 +27,7 @@ export(labelMatcher, matchLabels,
 export(unitize)
 
 # thresher
-export(thresherPalette, samplePalette)
+#export(thresherPalette, samplePalette)
 exportClasses("Thresher", "SimThresher")
 export(Thresher, SimThresher)
 
