--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Thresher
-Version: 0.11.4
-Date: 2018-01-08
+Version: 0.11.5
+Date: 2018-01-09
 Title: Threshing and Reaping for Principal Components
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: The Thresher package defines the classes used to identify
   outliers (threshing) and compute the number of significant principal
   components and number of clusters (reaping) in a joint application
-  of PCA and hierarchical clustering.
+  of PCA and hierarchical clustering. See <doi:10.1186/s12859-017-1998-9>.
 Depends: R (>= 3.1), ClassDiscovery, PCDimension
 Imports: methods, stats, graphics, grDevices, MASS, colorspace, movMF, ade4, oompaBase
 Suggests: NbClust
