Added more reference details in the DESCRIPTION file.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@67 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Thresher/DESCRIPTION
+++ b/pkg/Thresher/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to identify
   outliers (threshing) and compute the number of significant principal
   components and number of clusters (reaping) in a joint application
-  of PCA and hierarchical clustering. See Wang et al.,
+  of PCA and hierarchical clustering. See Wang et al., 2018,
   <doi:10.1186/s12859-017-1998-9>.
 Depends: R (>= 3.1), ClassDiscovery, PCDimension
 Imports: methods, stats, graphics, grDevices, MASS, colorspace, movMF, ade4, oompaBase
