Fixed the bug in removeDuplicates when features only has one column (drop=FALSE). Added options to "try" commands to write the errors to standard output, so they show up in the HTM file after knitting.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@97 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/DESCRIPTION
+++ b/pkg/BinaryMatrix/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: BinaryMatrix
-Version: 0.0.5
-Date: 2019-03-01
+Version: 0.0.6
+Date: 2019-03-05
 Title: Clustering and Visualizing Binary Matrices
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
-Description: Defines the classes used to identify explore, cluster and
+Description: Defines the classes used to explore, cluster and
   visualize binary matrices.
 Depends: R (>= 3.1)
-Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph
+Imports: methods, stas, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph
 Suggests: Polychrome
 License: Apache License (== 2.0)
 biocViews: Clustering
