--- a/pkg/BinaryMatrix/DESCRIPTION
+++ b/pkg/BinaryMatrix/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: BinaryMatrix
-Version: 0.0.6
-Date: 2019-03-05
+Version: 0.0.7
+Date: 2019-03-06
 Title: Clustering and Visualizing Binary Matrices
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize binary matrices.
 Depends: R (>= 3.1)
-Imports: methods, stas, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph
+Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph
 Suggests: Polychrome
 License: Apache License (== 2.0)
 biocViews: Clustering
