Yet another change to DESCRIPTION and NAMESPACE; realized that Polychrome has to be "Imports" not just "Suggests".
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@99 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -7,6 +7,7 @@ importFrom("stats", "dist", "hclust", "cmdscale", "as.dist")
 importFrom("utils", "data")
 importFrom("cluster", "pam")
 importFrom("Rtsne", "Rtsne")
+importFrom("Polychrome", "dark.colors")
 importFrom("Thresher", "Thresher", "Reaper", "remap")
 # redefined S3 methods
 #importMethodsFrom(oompaBase, "summary", "plot", "image")
