--- a/pkg/BinaryMatrix/DESCRIPTION
+++ b/pkg/BinaryMatrix/DESCRIPTION
@@ -7,8 +7,7 @@ Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize binary matrices.
 Depends: R (>= 3.1)
-Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph
-Suggests: Polychrome
+Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph, Polychrome
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
