Fixed a bug in the implementation of Goodman-Kruskal. Added "[" method to DistanceVids. Added "recolor" and "downsample" methods.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@100 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -3,12 +3,14 @@
 ###
 import(methods)
 
-importFrom("stats", "dist", "hclust", "cmdscale", "as.dist")
+importFrom("stats", "dist", "hclust", "cmdscale", "as.dist",
+           "rbinom", "as.dendrogram", "as.hclust")
 importFrom("utils", "data")
 importFrom("cluster", "pam")
 importFrom("Rtsne", "Rtsne")
 importFrom("Polychrome", "dark.colors")
 importFrom("Thresher", "Thresher", "Reaper", "remap")
+importFrom("dendextend", "prune")
 # redefined S3 methods
 #importMethodsFrom(oompaBase, "summary", "plot", "image")
 
@@ -30,8 +32,12 @@ export("threshLGF")
 exportClasses("DistanceVis")
 export("DistanceVis", "addVisualization")
 
+exportMethods("hist")
+
 export(recolor)
 
+# 05-graph
+export(downsample)
 
 
 # new methods for new classes
