--- a/pkg/BinaryMatrix/DESCRIPTION
+++ b/pkg/BinaryMatrix/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: BinaryMatrix
-Version: 0.0.7
-Date: 2019-03-06
+Version: 0.1.1
+Date: 2019-03-08
 Title: Clustering and Visualizing Binary Matrices
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize binary matrices.
 Depends: R (>= 3.1)
-Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1), Rtsne, igraph, Polychrome
+Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1),
+  Rtsne, igraph, Polychrome, dendextend
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
