Changed BinaryMatrix class so it carries along both row and column annotations. Added a transpose ("t") operation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@104 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -22,7 +22,7 @@ export("binaryDistance")
 exportClasses("BinaryMatrix")
 export("BinaryMatrix", "removeDuplicateFeatures")
 
-exportMethods("[", "dim", "summary")
+exportMethods("[", "dim", "summary", "t")
 
 # 03-thresh
 exportClasses("ThreshedBinaryMatrix")
