Changed meaning of "recolor", and renamed the old meaning as "remapColors".
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@105 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -34,7 +34,7 @@ export("DistanceVis", "addVisualization")
 
 exportMethods("hist")
 
-export(recolor)
+export(recolor, remapColors)
 
 # 05-graph
 export(downsample)
