Implemented igraph visualizations. Also fixed a bug where names/labels were not begin propagated correctly. Finally, updated CML500 and CML100 to ensure that they have the correct LGF feature info.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@106 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -4,13 +4,15 @@
 import(methods)
 
 importFrom("stats", "dist", "hclust", "cmdscale", "as.dist",
-           "rbinom", "as.dendrogram", "as.hclust")
+           "rbinom", "as.dendrogram", "as.hclust", "quantile")
 importFrom("utils", "data")
 importFrom("cluster", "pam")
 importFrom("Rtsne", "Rtsne")
 importFrom("Polychrome", "dark.colors")
 importFrom("Thresher", "Thresher", "Reaper", "remap")
 importFrom("dendextend", "prune")
+importFrom("igraph", "vertex_attr", "set_vertex_attr",
+           "layout_nicely", "graph_from_data_frame")
 # redefined S3 methods
 #importMethodsFrom(oompaBase, "summary", "plot", "image")
 
