Made "recoverCluster" an exported function, with a simpler interface.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@110 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NAMESPACE
+++ b/pkg/BinaryMatrix/NAMESPACE
@@ -32,7 +32,7 @@ export("threshLGF")
 
 # 04-vis
 exportClasses("DistanceVis")
-export("DistanceVis", "addVisualization")
+export("DistanceVis", "addVisualization", "recoverCluster")
 
 exportMethods("hist")
 
