--- a/pkg/SillyPutty/DESCRIPTION
+++ b/pkg/SillyPutty/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Implements a simple, novel clustering algorithm based on
   optimizing the silhouette width.
 Depends: R (>= 3.1)
-Imports: methods, cluster, Thresher, oompaBase, Polychrome
+Imports: methods, cluster, Thresher, oompaBase, Polychrome (>= 1.2)
 License: Apache License (== 2.0)
 biocViews: Clustering
 URL: http://oompa.r-forge.r-project.org/
