--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Mercator
-Version: 0.7.7
+Version: 0.7.8
 Date: 2019-07-12
 Title: Clustering and Visualizing Distance Matrices
 Author: Kevin R. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize distance matrices, espcially those arising from binary data.
-Depends: R (>= 3.1)
-Imports: methods, stats, graphics, utils, cluster, Thresher (>= 1.1),
+Depends: R (>= 3.1), Thresher (>= 1.1)
+Imports: methods, stats, graphics, utils, cluster,
   Rtsne, igraph, Polychrome, dendextend
 License: Apache License (== 2.0)
 biocViews: Clustering
