Changed function name from "recoverCluster" to "getClusters".
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@132 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -8,6 +8,7 @@ import(Thresher)
 importFrom("stats", "dist", "hclust", "cmdscale", "as.dist",
            "rbinom", "as.dendrogram", "as.hclust", "quantile")
 importFrom("utils", "data")
+importFrom("graphics", "hist")
 importFrom("cluster", "pam")
 importFrom("Rtsne", "Rtsne")
 importFrom("Polychrome", "dark.colors")
@@ -33,7 +34,7 @@ export("threshLGF")
 
 # 04-vis
 exportClasses("Mercator")
-export("Mercator", "addVisualization", "recoverCluster")
+export("Mercator", "addVisualization", "getClusters")
 
 exportMethods("hist")
 
