Working ion man pages.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@140 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Mercator
-Version: 0.8.2
-Date: 2019-07-16
+Version: 0.8.3
+Date: 2019-07-31
 Title: Clustering and Visualizing Distance Matrices
-Author: Kevin R. Coombes
+Author: Kevin R. Coombes, Caitlin E. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize distance matrices, espcially those arising from binary data.
