Deprecated 'recolor' in favor of 'setClusters'.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@146 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -38,7 +38,7 @@ export("Mercator", "addVisualization", "getClusters")
 
 exportMethods("hist")
 
-export(recolor, remapColors)
+export(setClusters, recolor, remapColors)
 
 # 05-graph
 export(downsample)
