Fixed NAMESPACE bugs that ultimately track back to graphics::smoothScatter calling a hidden function in grDevices that calls yet another function in KernSmooth.In the process, changed method name from "smoothScatter" to reuse th "scatter" generic from Thresher.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@152 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -8,7 +8,7 @@ importFrom("stats", "dist", "hclust", "cmdscale", "as.dist",
            "rbinom", "as.dendrogram", "as.hclust", "quantile")
 importFrom("utils", "data")
 importFrom("graphics", "hist", "par", "barplot", "smoothScatter")
-importFrom("grDevices", "dev.interactive", "devAskNewPage")
+importFrom("grDevices", "dev.interactive", "devAskNewPage", "topo.colors")
 importFrom("cluster", "pam", "silhouette")
 importFrom("Rtsne", "Rtsne")
 importFrom("ClassDiscovery", "plotColoredClusters")
@@ -34,7 +34,7 @@ export("threshLGF")
 exportClasses("Mercator")
 export("Mercator", "addVisualization", "getClusters")
 
-exportMethods("hist", "plot", "barplot", "smoothScatter")
+exportMethods("hist", "plot", "barplot", "scatter")
 
 export(setClusters, recolor, remapColors)
 
