--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: Mercator
-Version: 0.9.3
-Date: 2019-08-23
+Version: 0.9.4
+Date: 2019-08-24
 Title: Clustering and Visualizing Distance Matrices
 Author: Kevin R. Coombes, Caitlin E. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
   visualize distance matrices, espcially those arising from binary data.
 Depends: R (>= 3.1), Thresher (>= 1.1)
-Imports: methods, stats, graphics, utils, cluster, ClassDiscovery,
-  Rtsne, igraph, Polychrome, dendextend
+Imports: methods, stats, utils, graphics, grDevices, KernSmooth,
+  cluster, Rtsne, ClassDiscovery, Polychrome, dendextend, igraph
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
 License: Apache License (== 2.0)
