Typo in DESCRFIPTION file.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@153 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/DESCRIPTION
+++ b/pkg/Mercator/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Clustering and Visualizing Distance Matrices
 Author: Kevin R. Coombes, Caitlin E. Coombes
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines the classes used to explore, cluster and
-  visualize distance matrices, espcially those arising from binary data.
+  visualize distance matrices, especially those arising from binary data.
 Depends: R (>= 3.1), Thresher (>= 1.1)
 Imports: methods, stats, utils, graphics, grDevices, KernSmooth,
   cluster, Rtsne, ClassDiscovery, Polychrome, dendextend, igraph
