First version that manages to build a package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@158 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/CytoGPS/NAMESPACE
+++ b/pkg/CytoGPS/NAMESPACE
@@ -2,9 +2,10 @@
 ### NAMESPACE
 ###
 import(methods)
-importFrom("graphics", "hist")
-export("")
-exportClasses("")
-exportMethods("")
+importFrom("graphics", "image", "barplot", "abline", "layout",
+           "legend", "lines", "mtext", "par")
+export("makeIdiogram", "biIdiogram", "stackIdiogram")
+#exportClasses("")
+#exportMethods("")
 
 
