Separate class/code to show the image of a single chromosome-idiogram
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@159 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/CytoGPS/DESCRIPTION
+++ b/pkg/CytoGPS/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: CytoGPS
-Version: 0.0.2
-Date: 2019-10-09
+Version: 0.0.3
+Date: 2019-10-11
 Title: Using Cytogenetics Data in R
 Author: Kevin R. Coombes, Dwayne Tally
 Maintainer: Kevin R. Coombes <krc@silicovore.com>
 Description: Defines classes and methods to process text-based
   cytogenetics using the CytoGPS web site, then import the results
   into R for further analysis and graphing.
-Depends: R (>= 3.1)
-Imports: methods
+Depends: R (>= 3.5)
+Imports: methods, graphics
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
 License: Apache License (== 2.0)
