Fixed a NAMESPACE/import bug. The 'scatter' method calls the 'smoothScatter' function from 'graphics'. This in turn calls a hidden (unexported) function from 'grDevices' using three colons (:::), which calls 'KernSmooth::bkde2D' without importing anything. CRAN checks force my package to know this internal implementation and import the function explicitly.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@165 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NAMESPACE
+++ b/pkg/Mercator/NAMESPACE
@@ -16,6 +16,7 @@ importFrom("Polychrome", "dark.colors")
 importFrom("dendextend", "prune")
 importFrom("igraph", "vertex_attr", "set_vertex_attr",
            "layout_nicely", "graph_from_data_frame")
+importFrom("KernSmooth", "bkde2D") # called without import by' smoothScatter' through 'grDevices'
 
 # 01-metrics
 export("binaryDistance")
