Wrote a separate function that plots one chromosome with a stack of bar charts above it.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@168 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -4,10 +4,11 @@
 import(methods)
 importFrom("graphics", "image", "barplot", "abline", "layout",
            "legend", "lines", "mtext", "par")
-export("makeIdiogram", "biIdiogram", "stackIdiogram")
+importFrom("grDevices", "palette")
+#export("makeIdiogram", "biIdiogram", "stackIdiogram")
 
 exportClasses("Chromosome")
 export("Chromosome")
 exportMethods("image")
 
-
+export("plot1Chrom")
