--- a/pkg/RCytoGPS/DESCRIPTION
+++ b/pkg/RCytoGPS/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: RCytoGPS
-Version: 0.1.0
+Version: 0.1.1
 Date: 2020-02-17
 Title: Using Cytogenetics Data in R
 Author: Kevin R. Coombes, Dwayne Tally
@@ -8,7 +8,7 @@ Description: Defines classes and methods to process text-based
   cytogenetics using the CytoGPS web site, then import the results
   into R for further analysis and graphing.
 Depends: R (>= 3.5)
-Imports: methods, graphics
+Imports: methods, graphics, grDevices
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
 License: Apache License (== 2.0)
