Added "genome" barplots.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@173 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -11,4 +11,4 @@ exportClasses("Chromosome")
 export("Chromosome")
 exportMethods("image")
 
-export("plot1Chrom", "singles")
+export("plot1Chrom", "singles", "showGenome",  "genomeBarplot")
