Improved plot1Chrom so it plots both vertically and horizontally.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@174 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -3,7 +3,8 @@
 ###
 import(methods)
 importFrom("graphics", "image", "barplot", "abline", "layout",
-           "legend", "lines", "mtext", "par")
+           "legend", "lines", "mtext", "par",
+           "axis", "plot", "rect", "text")
 importFrom("grDevices", "palette")
 #export("makeIdiogram", "biIdiogram", "stackIdiogram")
 
