First draft of `plot2Chrom`, which plots two-sided bar charts for a single chromosome and is intended as a building block to simplify biIdiogram.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@175 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -12,4 +12,6 @@ exportClasses("Chromosome")
 export("Chromosome")
 exportMethods("image")
 
-export("plot1Chrom", "singles", "showGenome",  "genomeBarplot")
+export("plot1Chrom", "singles",
+       "showGenome",  "genomeBarplot",
+       "makeIdiogram")
