Reimplemented biIdiogram using plot2Chrom
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@177 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -6,7 +6,7 @@ importFrom("graphics", "image", "barplot", "abline", "layout",
            "legend", "lines", "mtext", "par",
            "axis", "plot", "rect", "text")
 importFrom("grDevices", "palette")
-#export("makeIdiogram", "biIdiogram", "stackIdiogram")
+#export("makeIdiogram", "stackIdiogram")
 
 exportClasses("Chromosome")
 export("Chromosome")
@@ -14,4 +14,5 @@ exportMethods("image")
 
 export("plot1Chrom", "singles",
        "showGenome",  "genomeBarplot",
-       "makeIdiogram")
+       "makeIdiogram",
+       "plot2Chrom", "biIdiogram")
