--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -6,7 +6,6 @@ importFrom("graphics", "image", "barplot", "abline", "layout",
            "legend", "lines", "mtext", "par",
            "axis", "plot", "rect", "text")
 importFrom("grDevices", "palette")
-#export("makeIdiogram", "stackIdiogram")
 
 exportClasses("Chromosome")
 export("Chromosome")
@@ -15,4 +14,4 @@ exportMethods("image")
 export("plot1Chrom", "singles",
        "showGenome",  "genomeBarplot",
        "makeIdiogram",
-       "plot2Chrom", "biIdiogram")
+       "plot2Chrom", "biIdiogram", "stackIdiogram")
