Started converting from straight functions to classes and methods.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@181 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NAMESPACE
+++ b/pkg/RCytoGPS/NAMESPACE
@@ -15,3 +15,7 @@ export("plot1Chrom", "singles",
        "showGenome",  "genomeBarplot",
        "makeIdiogram",
        "plot2Chrom", "biIdiogram", "stackIdiogram")
+
+export("CytobandData")
+exportClasses("CytobandData")
+exportMethods("barplot")
